[metadata]
name             = pyjadx
description      = Python Binding for Jadx decompiler
description-file = README.rst
license-file     = LICENSE
author           = Romain Thomas
author_email     = pyjadx@romainthomas.fr
license          = Apache 2.0
keywords         = android, decompiler, binding
home-page        = https://github.com/romainthomas/pyjadx
project_urls =
  Bug Tracker   = https://github.com/romainthomas/pyjadx/issues
  Documentation = http://pyjadx.romainthomas.fr
  Source Code   = https://github.com/romainthomas/pyjadx
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: C++
    Topic :: Software Development :: Libraries

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
  sphinx
  colored
  sphinx-paramlinks
  sphinx_rtd_theme
  pygments

[build_sphinx]
project = PyJadx
source-dir = doc
config-dir = doc
build-dir  = doc/_build
fresh-env  = True

[build_ext]
inplace=1
